Fixed spacing recipe list title

--- a/sass/partials/_list.scss
+++ b/sass/partials/_list.scss
@@ -17,7 +17,7 @@
     }
 
     &-summary {
-      @media screen and (min-width: $mobileMax) {
+      @media screen and (max-width: $mobileMax) {
         margin-top: $space-normal;
       }
       @media screen and (min-width: $tabletMin) {
